first session more cleanup

--- a/1 intro/session 1 intro/first session.ipynb
+++ b/1 intro/session 1 intro/first session.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "9      0            237736 30.07   NaN        C  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "max         891.00      1.00    3.00  80.00   8.00   6.00 512.33"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,16 +771,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15f23580490>"
+       "<seaborn.axisgrid.PairGrid at 0x1eec8264340>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -821,14 +821,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Cristina\\AppData\\Local\\Temp\\ipykernel_19004\\88440536.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "C:\\Users\\Cristina\\AppData\\Local\\Temp\\ipykernel_13464\\88440536.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(titanic_df.corr(), cmap=\"viridis\")\n"
      ]
     },
@@ -838,7 +838,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -954,28 +954,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "❗ There are a lot of different machine learning algorithms out there. The goal of this course is not to discuss them one by one as was done in Business Analytics minor but rather to view this step as one step in an entire process. Not everyone has taken BA minor as we have both have students following from Limburg and abroad.\n",
-    "\n",
-    "In later lectures we provide you with tricks on how to select the right algorithm(s) for the right task without knowing the finer details of each of them. \n",
-    "\n",
-    "Students following the 4 ECTS version of this course have 2 tests, one on Python for data science and a second one on AI algorithms. Students from the 6 ECTS version of the course can use this to brush up on their knowledge but are not required to."
+    "💻🤖 ```Sci-kit learn``` is the main machine learning package we will be using. It contains most popular algorithms together with other things from the wider data science toolbox such as model evaluation and data preparation. A key feature of sci-kit learn are Pipelines. "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 💻🤖 ```Sci-kit learn``` is the main machine learning package we will be using. It contains most popular algorithms together with other things from the wider data science toolbox such as model evaluation and data preparation. A key feature of sci-kit learn are Pipelines. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 💻🤖 The ```Pipeline``` class allows you to chain multiple steps after each other. This enables you to carry out transformations of your data (data preparation step in CRISP-DM) and modeling at the same time. Another advantage is that this enables you to deploy, monitor and version control your machine learning models in a correct way. Time permitting, We will discuss this at more length in the end of the course. "
+    "💻🤖 The ```Pipeline``` class allows you to chain multiple steps after each other. This enables you to carry out transformations of your data (data preparation step in CRISP-DM) and modeling at the same time. Another advantage is that this enables you to deploy, monitor and version control your machine learning models in a correct way. Time permitting, We will discuss this at more length in the end of the course. "
    ]
   },
   {
@@ -1004,51 +995,11 @@
     "💡 Finally, we impute (fill in the blanks) of the missing values with their mean. \n",
     "<center> <img src=\"images\\mean imputation.png\"></center>\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**These techniques will be discussed at length in the classes that correspond to the respective steps in the CRISP-DM process. Don't worry if they seem arbitrary right now.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<blockquote> \n",
-    "\n",
-    "##### ❓ What techniques would you apply to what variables? \n",
-    "\n",
-    "</blockquote> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<blockquote> \n",
-    "\n",
-    "#### 📚 Optional homework:\n",
-    "\n",
-    "These are open ended, you do not need to complete these (by the next lecture). They are rather for students that want to work more ahead of time or need to refresh some concepts. **Most of these will be covered in later lectures.**\n",
-    "\n",
-    "1. For those not familiar with Python or want a comprehensive refresher: Read chapter 3, 4, 5 in \"A Beginners Guide to Python 3 Programming\" (Check Toledo on how to get free access).\n",
-    "2. 💡 **Especially for international students and students Limburg**: Read chapter 1 of \"Python Data Analytics\".\n",
-    "3. For those that know SQL well and want to get started with Pandas with a short guide: https://pandas.pydata.org/docs/getting_started/comparison/comparison_with_sql.html\n",
-    "4. 10 minute introduction to Pandas: https://pandas.pydata.org/docs/user_guide/10min.html \n",
-    "5. Introduction to Seaborn: https://seaborn.pydata.org/tutorial/introduction.html\n",
-    "6. For those with a lot of time left: Chapter 2 and 3 of \"Python Data Analytics\" \n",
-    "\n",
-    "</blockquote> \n",
-    "\n",
-    "<br>\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1062,12 +1013,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f24667517f189867b1c74395eb1a8df2a0ccf1ace256c9bf89e01eba92aa8972"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
